Fix content and remove overflow

--- a/frontend/src/styles/mocktestCard.scss
+++ b/frontend/src/styles/mocktestCard.scss
@@ -2,7 +2,7 @@
 
 * {
   font-family: "Montserrat", sans-serif;
-  overflow: auto;
+  // overflow: auto;
 }
 
 .surround {
